<resources>
    <string name="app_name">AD_ListaCompra4</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="editTextConcepto">Concepto</string>
    <string name="editTextCantidad">0</string>
    <string name="textViewLista">Lista de compra</string>
    <string name="btnAdd">Añadir</string>
    <string name="btnSave">Guardar</string>
    <string name="btnReset">Reset</string>
</resources>
