<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextConcepto"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/editTextConcepto" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCantidad"
        android:layout_below="@+id/editTextConcepto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/editTextCantidad" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textViewLista"
        android:id="@+id/textViewLista"
        android:layout_below="@+id/editTextCantidad"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAdd"
        android:id="@+id/btnAdd"
        android:layout_below="@+id/textViewLista"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:id="@+id/btnSave"
        android:layout_alignTop="@+id/btnAdd"
        android:layout_toRightOf="@+id/btnAdd"
        android:layout_toEndOf="@+id/btnAdd" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnReset"
        android:id="@+id/btnReset"
        android:layout_below="@+id/textViewLista"
        android:layout_toRightOf="@+id/btnSave"
        android:layout_toEndOf="@+id/btnSave" />

</RelativeLayout>
